[package]
name = "erdh-rs"
version = "0.1.0"
authors = ["iwot <shinya.iw@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
mysql = "*"
r2d2 = "*"
getopts = "0.2"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
failure = "0.1.5"
postgres = "0.15"
# nom-sql = "0.0.4"
sqlite3 = "0.24.0"
regex = "1"

[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version="*"

[dependencies.nom-sql]
git = "https://github.com/iwot/nom-sql"
version="*"
#path = "../iwot/nom-sql"


[lib]
name = "mylib"

[target.x86_64-unknown-linux-musl]
rustflags = ["-Z", "linker-flavor=ld.lld"]
